@@ -9,6 +9,8 @@ addopts =
         --reuse-db
         --tb=short
         --echo-version=django
+        --echo-env=CI*
+        --echo-env=PIPENV*
         --capture=no
         --cov-report=html
         --cov-config=tests/.coveragerc
@@ -52,7 +54,6 @@ commands =
     pipenv run pre-commit run --all-files --hook-stage push
     pipenv run pre-commit run --all-files --hook-stage manual
     pipenv run py.test tests \
-            --create-db \
             --cov-report=term \
             --cov-report=html \
             --cov-config=tests/.coveragerc \
