@@ -7,6 +7,7 @@
 * Adopting of RabbitMQ to prevent message loss
 * new admin index page
 * Excel IQY support (beta)
+* Allow endpoints to be consumend bny anonymous users
 
 
 1.7
